--- a/index.html
+++ b/index.html
@@ -837,7 +837,8 @@
 <body>
   <!-- Hero Section - Full Screen -->
   <section class="hero-section" id="hero">
-    <h1 class="hero-title">Portofolio Husain Mulyansyah</h1>
+    <h1 class="hero-title">Portofolio</h1>
+    <h1 class="hero-title">Husain Mulyansyah</h1>
     <p class="hero-subtitle">Fotografi, Videografi & IT Engineering</p>
     
     <div class="nav-buttons">
